--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,57 @@
+# version: '3.8'
+
+# services:
+#   virus-project:
+#     build: .
+#     container_name: virus-project
+#     ports:
+#       - "3000:3000"
+#     environment:
+#       PORT: 3000
+#       MONGO_URL: mongodb://root:root@mongo_bdd:27017/
+#     depends_on:
+#       - mongo_bdd
+#     networks:
+#       - app-network
+
+#   mongo_bdd:
+#     image: mongo
+#     container_name: mongo_bdd
+#     environment:
+#       MONGO_INITDB_ROOT_USERNAME: root
+#       MONGO_INITDB_ROOT_PASSWORD: root
+#     ports:
+#       - "27017:27017"
+#     volumes:
+#       - mongodb_volume:/data/db
+#     networks:
+#       - app-network
+
+# volumes:
+#   mongodb_volume:
+
+# networks:
+#   app-network:
+
+
 version: '3.8'
 
 services:
   virus-project:
-    build: .
+    image: moiseshernandezalvarado/virus-mpox:latest
     container_name: virus-project
     ports:
       - "3000:3000"
-    environment:
-      PORT: 3000
-      MONGO_URL: mongodb://root:root@mongo_bdd:27017/
+    env_file:
+      - .env
     depends_on:
       - mongo_bdd
     networks:
       - app-network
+    environment:
+      PORT: 3000
+      MONGO_URL: mongodb://root:root@mongo_bdd:27017/
+    
 
   mongo_bdd:
     image: mongo
